# MIT-6.837-Assignments

./: .gitignore  README.md
Assignment_0/: IFS.cpp  IFS.h  Makefile  fern.ppm  ifs  image.h  main.cpp  sierpinski_triangle.ppm  sierpinski_triangle.txt
Assignment_1/: CMakeLists.txt
Assignment_1/include/: camera.h  group.h  hit.h  matrix.h  object3d.h  orthographicCamera.h  ray.h  scene_parser.h  sphere.h
Assignment_1/scenes/: scene1_03.txt  scene1_04.txt  scene1_05.txt  scene1_06.txt  scene1_07.txt
Assignment_1/src/: group.cpp  main.cpp  orthographicCamera.cpp  scene_parser.cpp  sphere.cpp
Assignment_2/: CMakeLists.txt
Assignment_2/include/: camera.h  light.h  material.h  matrix.h  object3d.h  scene_parser.h
Assignment_2/scenes/: scene2_04_perspective.txt  scene2_05_inside_sphere.txt  scene2_07_sphere_triangles.txt  scene2_09_bunny_200.txt  scene2_10_bunny_1k.txt  scene2_15_crazy_transforms.txt
Assignment_2/src/: group.cpp  image.cpp  main.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  plane.cpp  scene_parser.cpp  sphere.cpp  transform.cpp  triangle.cpp
Assignment_3/: CMakeLists.txt
Assignment_3/include/: glCanvas.h  hit.h  light.h  material.h  object3d.h  scene_parser.h  vectors.h
Assignment_3/scenes/: scene3_03_bunny_mesh_200.txt  scene3_04_bunny_mesh_1k.txt  scene3_05_axes_cube.txt  scene3_06_crazy_transforms.txt  scene3_11_weird_lighting_diffuse.txt  scene3_12_weird_lighting_specular.txt  test.txt
Assignment_3/src/: glCanvas.cpp  group.cpp  light.cpp  main.cpp  perspectiveCamera.cpp  plane.cpp  scene_parser.cpp  sphere.cpp  transform.cpp  triangle.cpp
Assignment_4/include/: camera.h  glCanvas.h  light.h  material.h  object3d.h  rayTracer.h  rayTree.h  scene_parser.h
Assignment_4/scenes/: scene4_03_mirrored_floor.txt  scene4_05_transparent_bar.txt  scene4_06_transparent_bars.txt  scene4_07_transparent_sphere_1.0.txt  scene4_08_transparent_sphere_1.1.txt  scene4_09_transparent_sphere_2.0.txt  scene4_10_point_light_distance.txt  scene4_12_point_light_circle_d_attenuation.txt  test.txt
Assignment_4/src/: glCanvas.cpp  group.cpp  light.cpp  main.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  rayTracer.cpp  rayTree.cpp  scene_parser.cpp  sphere.cpp  transform.cpp  triangle.cpp
Assignment_5/include/: boundingbox.h  glCanvas.h  marchingInfo.h  material.h  object3d.h  rayTracer.h  rayTree.h  scene_parser.h
Assignment_5/src/: boundingbox.cpp  glCanvas.cpp  grid.cpp  group.cpp  main.cpp  marchingInfo.cpp  plane.cpp  rayTracer.cpp  sphere.cpp  transform.cpp  triangle.cpp
Assignment_6/: CMakeLists.txt
Assignment_6/include/: boundingbox.h  material.h  object3d.h  perlin_noise.h  ray.h  rayTracer.h  raytracing_stats.h  scene_parser.h
Assignment_6/src/: grid.cpp  group.cpp  main.cpp  perlin_noise.cpp  rayTracer.cpp  scene_parser.cpp  sphere.cpp  transform.cpp  triangle.cpp
Assignment_7/: CMakeLists.txt
Assignment_7/include/: camera.h  film.h  filter.h  glCanvas.h  perlin_noise.h  rayTracer.h  rayTree.h  sample.h  sampler.h  scene_parser.h
Assignment_7/src/: film.cpp  grid.cpp  (+11 more)
Assignment_8/: CMakeLists.txt
Assignment_9/: CMakeLists.txt
Assignment_9/include/: forcefield.h  generator.h  glCanvas.h  integrator.h  matrix.h  parser.h  particle.h  particleSet.h  random.h  system.h  vectors.h
Assignment_9/src/: generator.cpp  glCanvas.cpp  integrator.cpp  main.cpp  matrix.cpp  parser.cpp  particle.cpp  system.cpp
Report/: MIT-6.837 实验报告.md
(+15 files in other folders)
